# stellar-trust-escrow

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  contributor_task.md  feature_request.md
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
backend/: .env.example  jest.config.js  package.json  server.js
backend/database/: schema.prisma
backend/lib/: cache.js  prisma.js
backend/middleware/: compression.js  responseTime.js
backend/queues/: emailQueue.js  scheduledQueue.js  webhookQueue.js
backend/services/: emailService.js  escrowIndexer.js  reputationService.js  stellarService.js
backend/tests/: batch.test.js  compression.test.js  escrowController.test.js  reputationService.test.js  websocket.test.js
backend/workers/: emailWorker.js  scheduler.js  webhookWorker.js
contracts/escrow_contract/: Cargo.toml
contracts/escrow_contract/src/: errors.rs  events.rs  lib.rs  oracle.rs  storage.rs  types.rs
contracts/escrow_contract/test_snapshots/tests/: test_approve_milestone_o1_completion_check.1.json  test_create_escrow_packs_metadata_separately.1.json  test_get_reputation_returns_default_record.1.json  test_initialize_uses_instance_storage.1.json
docs/: api-reference.md  frontend-guide.md  indexer-architecture-scaling.md  indexer-guide.md  smart-contract-guide.md
frontend/: .env.example  next.config.js  package.json  tailwind.config.js
frontend/app/: globals.css  (+2 more)
scripts/: deploy.sh  seed.js  test-contract.sh
(+59 files in other folders)
