[package]
name = "stellar-trust-escrow-contract"
version = "0.1.0"
edition = "2021"
publish = false
description = "Milestone-based escrow contract with on-chain reputation — StellarTrustEscrow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.0.0", features = [] }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
